# googleTK

./: README.md  googleTK.cabal  stack.yaml
app/: Main.hs
src/Lib/: FCMBasic.hs  TokenParser.hs
