name:                googleTK
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/googleTK#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/Lib
  ghc-options:         -Wall
  exposed-modules:     TokenParser
                     , FCMBasic
  other-modules:
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.1.6 && < 0.2
                     , jose-jwt
                     , bytestring
                     , x509
                     , wreq
                     , lens
                     , aeson
                     , text
                     , pem
                     , either
                     , cryptonite
                     , base64-bytestring
                     , http-types
                     , unordered-containers
                     , stm
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable googleTK-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , googleTK
                     , protolude >= 0.1.6 && < 0.2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite googleTK-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , googleTK
                     , protolude >= 0.1.6 && < 0.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/githubuser/googleTK
